--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
-theme: jekyll-theme-hacker
+url: -- # the base hostname & protocol for your site, e.g. http://example.com
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: [Zachary Cabiling Resume]
+description: [Showcase skills to my future employer.]
