--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ url: -- # the base hostname & protocol for your site, e.g. http://example.com
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-title: [Zachary Cabiling Resume]
-description: [Showcase skills to my future employer.]
+title: Zachary Cabiling Cybersecurity Profile
+description: Here is an overview of my skills are project in Cyber Security
